# mipt-algo

./: README.md
2016/2016-12-15_strings_contest/: CMakeLists.txt  input.txt  string_class.h  task_L_nenokku.cpp  task_b_decimal.cpp  task_c_substrcmp.cpp  task_e_invtrans.cpp  task_g_kthstr.cpp  task_h_prof.cpp  task_i_virus.cpp  task_j_trie.cpp  task_k_sufflcp.cpp
2017/allocator/: CMakeLists.txt  README.md  mtallocator.cpp  mtallocator_beautifulTL.cpp  mtallocator_does_not_work.cpp
2017/asm_10.02.2017/: hello.asm
2017/reversi/: CMakeLists.txt  Client.h  MyClient.cpp  SimpleStrategy.h  Strategy.h  StrategyNMoves.h
